Adding docker compose